# sample-florence2-object-detection

./: LICENSE  README.md  main.py  pyproject.toml
